---------------------------------------------------------------------------------------------------
Version: 0.1.33
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.32
Date: 2024-03-10
  Changelog:
    - Higher quality nightvision stays on longer
  Bug fixes:
    - Fixes to overlay optimizations in high game tick numbers
---------------------------------------------------------------------------------------------------
Version: 0.1.31
Date: 2024-03-06
  Changes:
    - Disabled "total raw" from quality items to increase performance
  Bug fixes:
    - Turrets now get the expected damage bonuses from research
    - Energy and fluid turrets now do not get extra damage from quality
---------------------------------------------------------------------------------------------------
Version: 0.1.30
Date: 2024-02-27
  Changes:
    - Added settings to draw quality on entities within a distance to the players or selected entities
---------------------------------------------------------------------------------------------------
Version: 0.1.29
Date: 2024-02-16
  Changes:
    - Correct rounding for quality bonuses
  Bug fixes:
    - Fix for empty quality bonus string
    - Fix for hand-crafting recipes with forbidden quality
---------------------------------------------------------------------------------------------------
Version: 0.1.28
Date: 2024-01-29
  Changes:
    - Ordered settings rather than random
    - Support for quality on friendly units
    - Added setting for disabling beacon overlay
  Bug fixes
    - Support "no quality" on armors
    - Support "no quality" on quality enhancing buildings
---------------------------------------------------------------------------------------------------
Version: 0.1.27
Date: 2024-01-27
  Changes:
    - Reduce number of recipes created
---------------------------------------------------------------------------------------------------