@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.33
 Date: ????
-  Changes:
+  Bug fixes:
+    - Handle technologies that use shared tables
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.32
 Date: 2024-03-10
